syntax = "proto3";

package proto_login;

message CMD_LOGIN {
    enum ENUM {
        INVALID = 0;            // 未定义
        LOGIN = 1;              // 登录 ( C -> S )
    }
}


/// Login (C->S)
message ENUM_LOGIN_MODE {
    enum ENUM {
        DEFAULT = 0;            // 缺省登录（本地数据库保存帐号密码。首次登录，没有帐号密码时，直接插入本地数据库）
        CUSTOM_BEGIN = 10;      // 自定义第 3 方平台登录
    }
}

message ENUM_LOGIN_ERROR {
    enum ENUM {
        OK = 0;                 // 没有错误
        PASSWORD = 1;           // 密码错误
        ACCOUNT = 2;            // 帐号错误
        PLATFORM = 3;           // 平台方错误
        MODE = 4;               // Mode错误
        DB = 5;                 // 数据库错误
        GATEWAY = 6;            // 找不到Gateway
        PARAMS = 7;             // 参数错误
    }
}

message MSG_LOGIN {
    string Account = 1;         // 帐号
    string Password = 2;        // 密码
    ENUM_LOGIN_MODE Mode = 3;   // 登录模式
    bytes Userdata = 4;         // 不同登录模式，可能需要携带自定义数据
}

message MSG_LOGIN_RESULT {
    ENUM_LOGIN_ERROR Err = 1;    // 0:登录成功；非0:错误号
    string Token = 2;            // 令牌
    string Address = 3;          // Gateway IP
    int32 Port = 4;              // Gateway Port
}
